--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -3,6 +3,7 @@ on:
     push:
     workflow_dispatch:
     pull_request:
+        types: [opened, synchronize, reopened]
 
 permissions:
     checks: write
