--- a/.github/workflows/check-vulnerabilities.yml
+++ b/.github/workflows/check-vulnerabilities.yml
@@ -8,5 +8,9 @@ jobs:
     check:
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
+              with:
+                  node-version: "18"
             - name: Check for Vulnerabilities
               run: npm audit
