Only high or higher vulnerabilities lead to test failing

--- a/.github/workflows/check-vulnerabilities.yml
+++ b/.github/workflows/check-vulnerabilities.yml
@@ -13,4 +13,4 @@ jobs:
               with:
                   node-version: "20"
             - name: Check for Vulnerabilities
-              run: npm audit
+              run: npm audit --audit-level high
