--- a/.github/workflows/check-vulnerabilities.yml
+++ b/.github/workflows/check-vulnerabilities.yml
@@ -5,7 +5,7 @@ on:
         types: [opened, synchronize, reopened]
 
 jobs:
-    check:
+    check-vulns:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
